fix repo version issue

--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     	"org.springframework.boot:spring-boot-starter-web",
     	"org.springframework.boot:spring-boot-starter-data-mongodb",
     	"org.springframework.data:spring-data-mongodb",
-    	"org.springframework.data:spring-data-jpa:1.0.0.RELEASE",
+    	"org.springframework.data:spring-data-jpa",
     	"org.springframework.data:spring-data-commons"
     ) 
     testCompile("org.springframework.boot:spring-boot-starter-test")
