--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,14 @@ services:
     image: com.vignesh.reviewable/reviewable
     build:
       context: build/docker
-    #entrypoint: java -jar reviewable.jar
     ports:
     - 9001:8080
+    depends_on:
+    - reviewabledb
+  reviewabledb:
+    image: mongo
+    ports:
+    - "27017:27017"
+    - "28017:28017"
     
     
