--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'docker'
 // end::plugin[]
 
 // This is used as the docker image prefix (org)
-group = 'com.vignesh.reviewable'
+group = 'com.craft.reviewable'
 
 jar {
     baseName = 'reviewable'
