--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ task buildDocker(type: Docker, dependsOn: build) {
   applicationName = "vpkannan/reviewable"
   dockerfile = file('Dockerfile')
   doFirst {
-    copy {
-      from jar
-      into stageDir
+    exec {
+    	executable 'docker'
+    	args 'build', '-t', applicationName, '.' 
     }
   }
 }
