--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ task buildDocker(type: Docker, dependsOn: build) {
   }
 }
 
-task publishImage {
+task publishImage (dependsOn: buildDocker) {
 	String registryUrl = "registry.hub.docker.com"
 	String appName = "vpkannan/reviewable"
 	
