add sonar exclusions for Application.java

--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,8 @@ sonarqube {
 		property "sonar.host.login", "admin" 
 		property "sonar.host.password", "admin"
 		property "sonar.java.coveragePlugin", "jacoco"
-		property "sonar.jacoco.reportPaths", "${buildDir}/jacoco/test.exec" 
+		property "sonar.jacoco.reportPaths", "${buildDir}/jacoco/test.exec"
+		property "sonar.exclusions", "Application.java" 
 		
 	} 
 }
