--- a/docker-compose-aws.yml
+++ b/docker-compose-aws.yml
@@ -1,15 +1,49 @@
 version: '2'
 services:
+
   reviewable:
     image: vpkannan/reviewable
+    build:
+      context: build/docker
     ports:
     - 9001:8080
+    links:
+    - logstash
     depends_on:
     - reviewabledb
+    
   reviewabledb:
     image: mongo
     ports:
-    - "27017:27017"
-    - "28017:28017"
+    - 27017:27017
+    - 28017:28017
     
-    
+  elasticsearch:
+    build: elk/elasticsearch/
+    container_name: elasticsearch
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      ES_JAVA_OPTS: "-Xms1g -Xmx1g"
+      
+  logstash:
+    build: elk/logstash/
+    container_name: logstash
+    command: -f /etc/logstash/conf.d/
+    volumes:
+      - ./elk/logstash/config:/etc/logstash/conf.d
+    ports:
+      - "9999:9999"
+    links:
+      - elasticsearch
+
+  kibana:
+    build: elk/kibana/
+    container_name: kibana
+    volumes:
+      - ./elk/kibana/config/:/opt/kibana/config/
+    ports:
+      - "5601:5601"
+    links:
+      - elasticsearch
