set ulimits for elasticsearch

--- a/docker-compose-aws.yml
+++ b/docker-compose-aws.yml
@@ -24,6 +24,10 @@ services:
       - "9300:9300"
     environment:
       ES_JAVA_OPTS: "-Xms1g -Xmx1g"
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
       
   logstash:
     build: elk/logstash/
