--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -12,4 +12,41 @@ services:
     - "27017:27017"
     - "28017:28017"
     
+  elasticsearch:
+    image: elasticsearch
+    ports:
+    - "9200:9200"
+    - "9300:9300"
+    mem_limit: 300M
+    
+  kibana:
+    image: kibana
+    ports:
+    - "5601:5601"
+    links:
+    - elasticsearch
+    environment: 
+      LOGSPOUT: ignore
+      
+  logstash:
+    build: logstash/
+    command: logstash -f /etc/logstash/conf.d/logstash.conf
+    volumes: 
+    - ./logstash/config:/etc/logstash/conf.d
+    ports: 
+    - "5000:5000"
+    - "5000:5000/udp"
+    links:
+    - elasticsearch
+    environment:
+      LOGSPOUT: ignore
+      
+  zipkin:
+    image: openzipkin/zipkin
+    environment: 
+    - STORAGE_TYPE=elasticsearch
+    - ES_HOSTS=elasticsearch
+    ports: 
+    - "9411:9411"
+    
     
