add build details to reviewable prod dc file

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   reviewable:
     image: vpkannan/reviewable
+    build:
+      context: build/docker
     ports:
     - 9001:8080
     depends_on:
