link logstash to reviewable

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,6 +8,9 @@ services:
     - 9001:8080
     depends_on:
     - reviewabledb
+    links:
+    - logstash
+    
   reviewabledb:
     image: mongo
     ports:
